--- a/content/blog/filtering-google-results-with-alfred.mdx
+++ b/content/blog/filtering-google-results-with-alfred.mdx
@@ -3,12 +3,12 @@ title: Filtering Google Results with Alfred
 type: post
 layout: article
 date: 2014-08-20
-description: "Google offers powerful filters for search results that can help you find exactly what you're looking for&mdash;it just isn't quick or easy to do. By using Alfred, you can configure these searches once and reuse them whenever you want."
+description: 'Google offers powerful filters for search results that can help you find exactly what you’re looking for&mdash;it just isn’t quick or easy to do. By using Alfred, you can configure these searches once and reuse them whenever you want.'
 ---
 
-Filtering search results on Google is always a bit of a hassle. The search tools are difficult to find, and once you've found them, you have to click each filter individually before _refreshing the page_ to enable another one. For commonly used filters or groups of filters, this can add up to be a real productivity killer. Thanks to [Alfred][alfred], however, you can configure these filters a **single time,** and then save them as a custom Web Search to use again in the future.
+Filtering search results on Google is always a bit of a hassle. The search tools are difficult to find, and once you’ve found them, you have to click each filter individually before _refreshing the page_ to enable another one. For commonly used filters or groups of filters, this can add up to be a real productivity killer. Thanks to [Alfred][alfred], however, you can configure these filters a **single time,** and then save them as a custom Web Search to use again in the future.
 
-For an introduction to Alfred check out Drew Barontini's _excellent_ [article][drew-alfred] on how to set up Aflred like a pro.
+For an introduction to Alfred check out Drew Barontini’s _excellent_ [article][drew-alfred] on how to set up Aflred like a pro.
 
 ## Adding a custom search
 
@@ -18,7 +18,7 @@ The modal that appears will let you define a custom search URL, as well as a tit
 
 ![Alfred Preferences][alfred-preferences]
 
-In the example above, I've defined a custom Google search that filters out any web pages published more than a year ago. This idea was inspired by Olivier Lacan's blog post [Put a Date on It][olivier-date] and helps me every day when searching for up-to-date information on web-related nerdery.
+In the example above, I’ve defined a custom Google search that filters out any web pages published more than a year ago. This idea was inspired by Olivier Lacan’s blog post [Put a Date on It][olivier-date] and helps me every day when searching for up-to-date information on web-related nerdery.
 
 Feel free to copy the URL below:
 
@@ -61,9 +61,9 @@ Labeled for reuse with modification:
 https://www.google.com/search?q={query}&tbm=isch&tbs=sur:fmc
 ```
 
-## Keep 'em coming
+## Keep ’em coming
 
-That's it for now, but as a [crazy efficiency nerd][olivier-tweet], I'll make sure to add to this post whenever I think of another useful Google search. Until then, have fun experimenting with custom search URLs on different websites. For example, you could search for only Prime-eligible items on Amazon&mdash;or even tweets you've posted in the last month.
+That’s it for now, but as a [crazy efficiency nerd][olivier-tweet], I’ll make sure to add to this post whenever I think of another useful Google search. Until then, have fun experimenting with custom search URLs on different websites. For example, you could search for only Prime-eligible items on Amazon&mdash;or even tweets you’ve posted in the last month.
 
 [alfred]: http://www.alfredapp.com/
 [drew-alfred]: http://drewbarontini.com/setup/alfred/
