--- a/content/blog/using-emmet-with-sublime-text.mdx
+++ b/content/blog/using-emmet-with-sublime-text.mdx
@@ -28,15 +28,15 @@ This means that by using Emmet we can:
   </figcaption>
 </figure>
 
-Pretty useful, right? Let's find out how to install it using Sublime Text.
+Pretty useful, right? Let’s find out how to install it using Sublime Text.
 
 ## Installing plugins
 
-Sublime Text has an amazing add-on called **Package Control** that lets you find and install virtually _any_ plug-in from within the application itself. The line of code to install Package Control changes with every release, so you'll have to copy it directly from the [offcial website][packagecontrol-install].
+Sublime Text has an amazing add-on called **Package Control** that lets you find and install virtually _any_ plug-in from within the application itself. The line of code to install Package Control changes with every release, so you’ll have to copy it directly from the [offcial website][packagecontrol-install].
 
 Once you have the snippet for your version of Sublime, launch the program and show the Console (<kbd>&#x2318;+`</kbd> on OS X). Paste the intended code, hit <kbd>Enter</kbd>, then watch Package Control install itself like magic.
 
-With Package Control installed, you can download additional plug-ins by opening the Command Palette (<kbd>Shift+&#x2318;+P</kbd> on OS X) and typing "Install Package" and then submitting the top result. A similar menu opens next, revealing the list of packages available for installation. Type "Emmet" here and choose the top result.
+With Package Control installed, you can download additional plug-ins by opening the Command Palette (<kbd>Shift+&#x2318;+P</kbd> on OS X) and typing “Install Package” and then submitting the top result. A similar menu opens next, revealing the list of packages available for installation. Type "Emmet" here and choose the top result.
 
 <figure class='figure'>
   <img class='figure-image' src='/assets/images/emmet-example-2.gif' />
@@ -52,13 +52,13 @@ Now that we have Emmet installed, we can finally start having fun with some of i
 1. Type a supported shortcut
 2. Press <kbd>Tab</kbd>
 
-And that's it! Check out some of the most useful [shortcuts][emmet-shortcuts] you can start using right now.
+And that’s it! Check out some of the most useful [shortcuts][emmet-shortcuts] you can start using right now.
 
 ## Getting better
 
 If you’re like me, getting up to speed with new tools is an endless struggle. Fortunately, Emmet is _completely optional_ once installed and you can ignore all of its features until **you** want to use them. This makes mastering Emmet as flexible as gradually adding shortcuts to your workflow when you need them. Start with the shorthand for a class or ID, for example, and then build up from there, learning more ambitious shortcuts along the way.
 
-You can visit the [official documentation][emmet-docs] to discover _all_ of Emmet's features, or if that isn't your cup of tea, CSS-Tricks' Chris Coyier has a sweet [screencast][csstricks-emmet-screencast] covering the basics along with everything else you'll need to know.
+You can visit the [official documentation][emmet-docs] to discover _all_ of Emmet’s features, or if that isn’t your cup of tea, CSS-Tricks’ Chris Coyier has a sweet [screencast][csstricks-emmet-screencast] covering the basics along with everything else you’ll need to know.
 
 [codepen-pen]: http://codepen.io/pen/
 [csstricks-emmet-screencast]: http://css-tricks.com/video-screencasts/129-emmet-awesome/
