Add content images

--- a/content/blog/ampersands-and-google-fonts/index.mdx
+++ b/content/blog/ampersands-and-google-fonts/index.mdx
@@ -8,7 +8,7 @@ description: 'Titles, headings, and display text can all benefit from the use of
 
 Ampersands are used most effectively in display contexts, such as titles and headings, so it rarely makes sense to use the dull, standard-issue ampersands that accompany most fonts. Instead, we’re often better off using a more interesting and elaborate alternative. Many fonts feature an _italic_ ampersand that is far more elegant than its conventional counterpart, making the italic ampersand preferable in a variety of contexts.
 
-![Baskerville’s ampersand compared with Baskerville Italic’s ampersand][baskerville-ampersands]
+![Baskerville’s ampersand compared with Baskerville Italic’s ampersand](./ampersands-baskerville.svg)
 
 **But what do you do if the italic version of a font lacks an interesting ampersand?**
 
