--- a/content/blog/filtering-google-results-with-alfred/index.mdx
+++ b/content/blog/filtering-google-results-with-alfred/index.mdx
@@ -16,7 +16,7 @@ To get started, open the `Preferences` window in Alfred, click the `Features` ta
 
 The modal that appears will let you define a custom search URL, as well as a title and keyword to use via Alfred’s main window. Once you configure a Google search _just the way you like it_, find the part of the URL that matches your search text and replace the words with `{query}`. Then paste your modified URL into the `Search URL` input field and label it to your liking.
 
-![Alfred Preferences][alfred-preferences]
+![Alfred Preferences]( ./alfred-google-past-year.jpg )
 
 In the example above, I’ve defined a custom Google search that filters out any web pages published more than a year ago. This idea was inspired by Olivier Lacan’s blog post [Put a Date on It][olivier-date] and helps me every day when searching for up-to-date information on web-related nerdery.
 
@@ -69,4 +69,3 @@ That’s it for now, but as a [crazy efficiency nerd][olivier-tweet], I’ll mak
 [drew-alfred]: http://drewbarontini.com/setup/alfred/
 [olivier-date]: http://olivierlacan.com/posts/put-a-date-on-it/
 [olivier-tweet]: https://twitter.com/olivierlacan/status/501359705550495744
-[alfred-preferences]: alfred-google-past-year.jpg
