--- a/content/blog/sidebearings-and-alignment/index.mdx
+++ b/content/blog/sidebearings-and-alignment/index.mdx
@@ -11,7 +11,7 @@ import CodePen from 'components/CodePen'
 
 Sidebearings are a necesary part of any font; along with kerning, they ensure that letters look well-spaced next to one another. If you look at one of the glyphs in a font, its _sidebearings_ are the spaces to the left and right of the letterform. These, along with the character itself, span a glyph’s entire width.
 
-![Sidebearings next alongside an H](sidebearings-glyph.svg)
+![Sidebearings next alongside an H](./sidebearings-glyph.svg)
 
 So how can sidebearings cause problems with alignment?
 
