--- a/content/blog/using-emmet-with-sublime-text/index.mdx
+++ b/content/blog/using-emmet-with-sublime-text/index.mdx
@@ -21,12 +21,7 @@ This means that by using Emmet we can:
 - Save time writing code
 - Make life easier
 
-<figure class='figure'>
-  <img class='figure-image' src='/assets/images/emmet-example-1.gif' />
-  <figcaption class='figure-caption'>
-    Scaffolding an HTML document and common navigation using&nbsp;Emmet
-  </figcaption>
-</figure>
+![Scaffolding an HTML document and common navigation using Emmet](./emmet-example-1.gif)
 
 Pretty useful, right? Let’s find out how to install it using Sublime Text.
 
@@ -38,12 +33,7 @@ Once you have the snippet for your version of Sublime, launch the program and sh
 
 With Package Control installed, you can download additional plug-ins by opening the Command Palette (<kbd>Shift+&#x2318;+P</kbd> on OS X) and typing “Install Package” and then submitting the top result. A similar menu opens next, revealing the list of packages available for installation. Type "Emmet" here and choose the top result.
 
-<figure class='figure'>
-  <img class='figure-image' src='/assets/images/emmet-example-2.gif' />
-  <figcaption class='figure-caption'>
-    Installing Emmet using Package Control
-  </figcaption>
-</figure>
+![Installing Emmet using Package Control](./emmet-example-2.gif)
 
 ## Using Emmet
 
