Archive Homebrew post (initial styles)

--- a/content/blog/updating-your-shell-with-homebrew/index.mdx
+++ b/content/blog/updating-your-shell-with-homebrew/index.mdx
@@ -1,8 +1,9 @@
 ---
 title: Updating Your Shell with Homebrew
-type: post
-layout: article
+archived: true
 date: 2014-07-21
+layout: article
+type: post
 description: 'If you haven’t manually updated your version of Bash or Zsh on OS X, chances are it’s out-of-date. Here’s how to install the latest version and keep your shell updated using Homebrew.'
 ---
 
