Update outdated content

--- a/posts/data-attributes-for-keyboard-shortcuts.mdx
+++ b/posts/data-attributes-for-keyboard-shortcuts.mdx
@@ -1,4 +1,5 @@
 ---
+archived: true
 date: '2015-03-16'
 description: 'With a little help from JavaScript, you can add a data attribute to any HTML element to instantly assign a shortcut key.'
 title: Data Attributes for Keyboard Shortcuts
