--- a/posts/responsive-footnotes.mdx
+++ b/posts/responsive-footnotes.mdx
@@ -1,5 +1,5 @@
 ---
-title: Responsive Sidenotes
+title: Responsive Footnotes
 type: post
 layout: article
 date: '2014-01-27'
@@ -7,7 +7,7 @@ description: 'Footnotes and sidenotes are both useful ways to annotate online bl
 allow_widow: true
 ---
 
-In the responsive sidenotes pattern, the footnotes at the very bottom of the page transform into sidenotes alongside body paragraphs. The numbered links within body text also appear and disappear, depending on the width of the browser. It’s a useful technique to display additional information on devices with ample screen space but still present the information to people using smaller devices.
+In the responsive footnotes pattern, the footnotes at the very bottom of the page transform into sidenotes alongside body paragraphs. The numbered links within body text also appear and disappear, depending on the width of the browser. It’s a useful technique to display additional information on devices with ample screen space but still present the information to people using smaller devices.
 
 Let’s check out the code that makes it work.
 
@@ -156,7 +156,7 @@ Using the following CSS, let’s take care of all of those goals one by one and 
 }
 ```
 
-And there you have it: responsive sidenotes that display on wide browsers yet degrade gracefully to footnotes in narrow browsers and environments without JavaScript support.
+And there you have it: responsive footnotes that display as footnotes on wide browsers, yet degrade gracefully to footnotes in narrow browsers and environments without JavaScript support.
 
 ## Gotchas
 
