Fix CodePen height prop syntax and type

--- a/posts/typographic-units-in-css.mdx
+++ b/posts/typographic-units-in-css.mdx
@@ -23,7 +23,7 @@ To illustrate this, if Helvetica Neue is set at a font size of `100px`, then you
 Using `ex` units in CSS is just like using any other units. You’re able to write them with any CSS property you’d use with pixels or `em` units.
 
 <CodePen
-  height='290'
+  height={290}
   id='d81ece0b6a9436654dd4777a73634005'
   title='Ex unit height highlighted'
 />
@@ -43,7 +43,7 @@ With this constraint in mind, here are some of the use cases where I’ve found 
 In the following example, I’m able to declare `max-width: 75ch` on the paragraph element, ensuring [ideal line length][csstricks-45-75] as the user’s viewport widens.
 
 <CodePen
-  height='340'
+  height={340}
   id='fbfae4fd58d5356f6b95683fb219aa38'
   title='Monospace type at 75ch'
 />
