--- a/posts/making-sense-of-ch-units.mdx
+++ b/posts/making-sense-of-ch-units.mdx
@@ -15,7 +15,7 @@ So what causes them to be so inaccurate?
 It comes down to the defintion of a ch unit. According to the [specification][specification], a ch unit is equal to the width of the 0 (zero) glyph found in the font used to render it. This definition works for monospaced fonts (where every glyph shares an identical width), but it’s completely unreliable for proportional fonts. On average, a ch unit ends up being 15–30% larger than the width of a font’s other glyphs.
 
 <CodePen
-  height='560'
+  height={560}
   id='24f0cb69d20658c4b14f6fef8e32ce59'
   title='Mismatched text and ch widths'
 />
@@ -31,7 +31,7 @@ Let’s say you have a 1000-character-long line of text and a `div` with a width
 Multiply by that number when using ch units, and the resulting value gives you a number much closer to what you’re looking for.
 
 <CodePen
-  height='490'
+  height={490}
   id='c41229e9197ff46d987dceffb4f36b38'
   title='Corrected text and ch widths'
 />
@@ -39,7 +39,7 @@ Multiply by that number when using ch units, and the resulting value gives you a
 The more text there is, the more reliable the resulting number becomes.
 
 <CodePen
-  height='370'
+  height={370}
   id='a6c07f62eb3d33741effa552b22abd84'
   title='Corrected paragraph text matching ch width'
 />
