Add initial syntax highlighting

--- a/posts/styling-fallback-fonts-with-sass.mdx
+++ b/posts/styling-fallback-fonts-with-sass.mdx
@@ -44,7 +44,7 @@ Let’s go over the issues one by one and I’ll show you ways to use Sass to cl
 
 The first thing we can do is use Sass’ ampersand selector to nest the current selector within an ancestor. It’s easier explain with an example:
 
-```sass
+```scss
 h1 {
   font-family: 'Arial', sans-serif;
   font-size: 34px;
